Fix blurry emojis

--- a/src/index.css
+++ b/src/index.css
@@ -197,10 +197,10 @@ All colors MUST be HSL.
     opacity: 0;
   }
   10% {
-    opacity: 0.3;
+    opacity: 0.7;
   }
   90% {
-    opacity: 0.3;
+    opacity: 0.7;
   }
   100% { 
     transform: translateY(100vh) translateX(-50%);
